# signal-library

./: .gitignore  README.md
.githooks/: pre-commit
.obsidian/: community-plugins.json
_dashboards/: aging-signals.md  inbox-triage.md  library-health.md  needs-attention.md
signals/: _taxonomy.yml
signals/active/: architizer.md  automattic.md  block-xyz.md  braintrust.md  buurtzorg.md  chief-outsiders.md  cornerstone.md  creator-fund.md  dassault.md  degruyter.md  dock-io.md  doordash.md  eightfold-novartis.md  emotiv.md  flowstate.md  g42.md  gloat.md  haier-rendanheyi.md  hbr-read-sci-fi.md  heidi-health.md  humanyze.md  kickresume.md  life-after-labor.md  meta-pods.md  moderna.md  neiry.md  nike-by-melrose.md  oklo.md  opolis.md  quantum-entanglement-in-the-brain-myelin.md  reddit-china-dating.md  rent-a-human.md  restofworld.md  revolut-ai.md  royal-society.md  sciencedaily.md  unilever.md  (+3 more)
templates/: signal-active.md  signal-draft.md
tools/: import_compas.py  install_hook.py  pyproject.toml
tools/signal_library/: load.py  retrieve.py
tools/tests/: conftest.py  test_body_sections.py  test_cli.py  test_domain_match.py  test_frontmatter.py  test_lint.py  test_load.py  test_must_fields.py  test_queue.py  test_rank.py  test_retrieve.py  test_taxonomy.py  test_url_format.py
tools/tests/fixtures/: bad_url_format.md  body_missing_from_to.md  frontmatter_from_to.md  invalid_domain_signal.md  invalid_segment_signal.md  missing_essence_signal.md  missing_url_signal.md  pattern_signal_no_url.md  valid_signal.md
tools/validate_signals/: frontmatter.py  lint.py
(+450 files in other folders)
