[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-library-tools"
version = "0.1.0"
description = "Validation hook + pipeline-facing library module for Signal Compass."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "python-frontmatter>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
]

[project.scripts]
validate-signals = "validate_signals.cli:main"

[tool.setuptools.packages.find]
include = ["validate_signals*", "signal_library*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
